fix: fix link align ICD-801

--- a/src/Styles/components/_subCategoryList.scss
+++ b/src/Styles/components/_subCategoryList.scss
@@ -102,6 +102,7 @@ body {
 			}
 
 			.categoryLink {
+				@include breakpoint('small', 'max') { text-align: left; }
 				@include rfs(12);
 				color: $green;
 				display: inline-block;
